--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=bmlx3df4ma7r1yh4.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
 DB_PORT=3306
-DB_DATABASE=admin_proyectos
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=xrzkozi5txgotlfs
+DB_USERNAME=itow9126evs7kv9m
+DB_PASSWORD=gqwaex14cll7qk8p
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
